--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fda-nutrition-facts": "^0.1.0",
+    "react-modal": "^3.14.4",
     "react-router": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
