--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-fda-nutrition-facts": "^0.1.0",
     "react-modal": "^3.14.4",
     "react-router": "^6.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
